--- a/libs/landing/src/lib/understanding-the-landing-library.mdx
+++ b/libs/landing/src/lib/understanding-the-landing-library.mdx
@@ -54,12 +54,14 @@ The `landing` library is a collection of React components specifically designed 
   - This helps build trust and connection with users who want to understand the story, mission, or background of your offering.
 
 <AboutSection
-  description="This is the about section content."
+  description="We are dedicated to delivering top-notch solutions that empower businesses to achieve their goals. Our team of experts works tirelessly to innovate and provide exceptional value to our clients."
   logos={[
     <svg key="logo1" fill="none" height="50" viewBox="0 0 24 24" width="50" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" strokeWidth="2"/><path d="M12 6v6l4 2" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"/></svg>,
     <svg key="logo2" fill="none" height="50" viewBox="0 0 24 24" width="50" xmlns="http://www.w3.org/2000/svg"><rect height="18" rx="2" stroke="currentColor" strokeWidth="2" width="18" x="3" y="3"/><path d="M3 9h18M9 21V9" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"/></svg>
   ]}
   title="About Us"
+  header="Our Partners"
+  subheader="Trusted by Leading Companies"
 />
 
 > **Best Practices:**  
