docs(landing): update FeaturesSection titles and descriptions for clarity

--- a/libs/landing/src/lib/understanding-the-landing-library.mdx
+++ b/libs/landing/src/lib/understanding-the-landing-library.mdx
@@ -97,11 +97,11 @@ The `landing` library is a collection of React components specifically designed 
   - Each feature can be highlighted with a short title, descriptive text, and an optional icon or image for visual interest.
 
 <FeaturesSection
-  title="Our Features"
+  title="Why Choose Us"
   features={[
-    { title: 'Feature 1', description: 'Description of feature 1' },
-    { title: 'Feature 2', description: 'Description of feature 2' },
-    { title: 'Feature 3', description: 'Description of feature 3' }
+    { title: 'Seamless Integration', description: 'Easily integrate with your existing tools and workflows to enhance productivity and efficiency.' },
+    { title: 'Scalable Solutions', description: 'Our platform grows with your business, ensuring you never outgrow our services and can always meet demand.' },
+    { title: '24/7 Support', description: 'Get round-the-clock support from our dedicated team of experts, ensuring you are never left without assistance.' }
   ]}
 />
 
