docs(introduction): enhance overview and component structure sections for clarity

--- a/libs/storybook-host/src/Introduction.mdx
+++ b/libs/storybook-host/src/Introduction.mdx
@@ -6,26 +6,33 @@ import { Meta } from '@storybook/blocks';
 
 ## Overview
 
-This component library is a key part of the **React Weapons of Choice** monorepo, an open-source boilerplate designed to streamline the development of single-page React applications (SPAs). By integrating powerful tools like **Nx** for monorepo management, **Tailwind CSS** for utility-first styling, and **Shadcn UI** for customizable UI components, this project provides developers with a robust and efficient starting point for building modern client-side applications. 
+This component library is a key part of the **React Weapons of Choice** monorepo, an open-source boilerplate designed to streamline the development of single-page React applications (SPAs). By integrating powerful tools like **Nx** for monorepo management, **Tailwind CSS** for utility-first styling, and **Shadcn UI** for customizable UI components, this project provides developers with a robust and efficient starting point for building modern client-side applications.
 
 ## Why Build with Components?
 
 Building with components offers several significant advantages:
 
-- **Reusability**: Components serve as modular building blocks that can be reused across different parts of an 
-application or even in multiple projects, reducing redundancy and promoting consistency. 
+- **Reusability**: Components serve as modular building blocks that can be reused across different parts of an application or even in multiple projects, reducing redundancy and promoting consistency.
 
-- **Maintainability**: Isolated components simplify debugging and updates. Changes in one component have 
-minimal impact on others, making the codebase easier to manage and scale over time. 
+- **Maintainability**: Isolated components simplify debugging and updates. Changes in one component have minimal impact on others, making the codebase easier to manage and scale over time.
 
-- **Scalability**: A component-based architecture allows for building scalable and modular 
-applications, making it easier to maintain and expand as the project grows. 
+- **Scalability**: A component-based architecture allows for building scalable and modular applications, making it easier to maintain and expand as the project grows.
 
-- **Performance Optimization**: React's use of a virtual DOM ensures that only the 
-components with changed data are re-rendered, enhancing application performance and providing a smoother user experience. 
+- **Performance Optimization**: React's use of a virtual DOM ensures that only the components with changed data are re-rendered, enhancing application performance and providing a smoother user experience.
 
-By leveraging these features, React's component-based architecture streamlines the development 
-process, allowing developers to build robust and efficient applications more rapidly.
+By leveraging these features, React's component-based architecture streamlines the development process, allowing developers to build robust and efficient applications more rapidly.
+
+## Component Structure
+
+Our component library follows the principles of Atomic Design, which breaks down the UI into smaller, reusable pieces:
+
+- **Base Components**: These are the fundamental building blocks, often derived from **Shadcn UI** components, and can be found in the `libs/shadcnui` directory.
+
+- **Composite Components**: These are composed of multiple base components to form more complex, reusable blocks. They can be found in the `libs/shadcnui-blocks` directory.
+
+- **Sections**: These are higher-level components that combine composite components to create sections of a page. They can be quickly used to build entire pages and are located in the `libs/landing` directory.
+
+By organizing components in this manner, we ensure a clear separation of concerns and promote reusability and maintainability.
 
 ## Explore the Components
 
@@ -33,4 +40,4 @@ This Storybook showcases a comprehensive set of reusable UI components provided 
 
 Happy coding!
 
- 
+
