docs(best-practices): update best practices and add resource links for clarity

--- a/libs/storybook-host/src/Introduction.mdx
+++ b/libs/storybook-host/src/Introduction.mdx
@@ -8,6 +8,10 @@ import { Meta } from '@storybook/blocks';
 
 This component library is a key part of the **React Weapons of Choice** monorepo, an open-source boilerplate designed to streamline the development of single-page React applications (SPAs). By integrating powerful tools like **Nx** for monorepo management, **Tailwind CSS** for utility-first styling, and **Shadcn UI** for customizable UI components, this project provides developers with a robust and efficient starting point for building modern client-side applications.
 
+- For more information on Nx, visit their [website](https://nx.dev/).
+- For more information on Tailwind CSS, visit their [website](https://tailwindcss.com/).
+- For more information on Shadcn UI, visit their [website](https://ui.shadcn.com/).
+
 ## Why Build with Components?
 
 Building with components offers several significant advantages:
