--- a/libs/storybook-host/src/GettingStarted.mdx
+++ b/libs/storybook-host/src/GettingStarted.mdx
@@ -9,7 +9,7 @@ Welcome to the React Weapons of Choice (RWOC) monorepo. This document provides a
 ## Overview of Libraries
 
 #### 1. **`@rwoc/shadcnui`**
-- **Description**: A library providing base UI components styled with Shadcn UI, ensuring a consistent look and feel across the application. It includes components like switches, tables, and more.
+- **Description**: A library providing base UI components styled with @rwoc/shadcnui, ensuring a consistent look and feel across the application. It includes components like switches, tables, and more.
 - **Usage**: Use these components to maintain a cohesive design system throughout the application.
 - **Example**:
   ```tsx
@@ -28,7 +28,7 @@ Welcome to the React Weapons of Choice (RWOC) monorepo. This document provides a
   );
   ```
 
-For more information on Shadcn UI, visit their [website](https://ui.shadcn.com/).
+For more information on @rwoc/shadcnui, visit their [website](https://ui.shadcn.com/).
 
 #### 2. **`@rwoc/shadcnui-blocks`**
 - **Description**: A collection of composite UI components built from the base Shadcn UI components. The library includes components such as buttons, cards, dialogs, and more.
@@ -97,8 +97,8 @@ For more information on Tailwind CSS, visit their [website](https://tailwindcss.
 
 The monorepo is organized into several libraries, each serving a specific purpose to ensure a modular, maintainable, and cohesive codebase. These libraries include:
 
-- **`@rwoc/shadcnui`**: Base Shadcn UI components.
-- **`@rwoc/shadcnui-blocks`**: Composite UI components built from Shadcn UI components.
+- **`@rwoc/shadcnui`**: Base @rwoc/shadcnui components.
+- **`@rwoc/shadcnui-blocks`**: Composite UI components built from @rwoc/shadcnui components.
 - **`@rwoc/common-tailwind`**: Common Tailwind CSS configurations.
 - **`@rwoc/landing`**: Components for landing pages.
 - **`@rwoc/shell`**: Layout components and utilities.
