--- a/libs/storybook-host/src/Introduction.mdx
+++ b/libs/storybook-host/src/Introduction.mdx
@@ -6,11 +6,11 @@ import { Meta } from '@storybook/blocks';
 
 ## Overview
 
-This component library is a key part of the **React Weapons of Choice** monorepo, an open-source boilerplate designed to streamline the development of single-page React applications (SPAs). By integrating powerful tools like **Nx** for monorepo management, **Tailwind CSS** for utility-first styling, and **Shadcn UI** for customizable UI components, this project provides developers with a robust and efficient starting point for building modern client-side applications.
+This component library is a key part of the **React Weapons of Choice** monorepo, an open-source boilerplate designed to streamline the development of single-page React applications (SPAs). By integrating powerful tools like **Nx** for monorepo management, **Tailwind CSS** for utility-first styling, and **@rwoc/shadcnui** for customizable UI components, this project provides developers with a robust and efficient starting point for building modern client-side applications.
 
 - For more information on Nx, visit their [website](https://nx.dev/).
 - For more information on Tailwind CSS, visit their [website](https://tailwindcss.com/).
-- For more information on Shadcn UI, visit their [website](https://ui.shadcn.com/).
+- For more information on @rwoc/shadcnui, visit their [website](https://ui.shadcn.com/).
 
 ## Why Build with Components?
 
@@ -30,7 +30,7 @@ By leveraging these features, React's component-based architecture streamlines t
 
 Our component library follows the principles of Atomic Design, which breaks down the UI into smaller, reusable pieces:
 
-- **Base Components**: These are the fundamental building blocks, often derived from **Shadcn UI** components, and can be found in the `libs/shadcnui` directory.
+- **Base Components**: These are the fundamental building blocks, often derived from **@rwoc/shadcnui** components, and can be found in the `libs/shadcnui` directory.
 
 - **Composite Components**: These are composed of multiple base components to form more complex, reusable blocks. They can be found in the `libs/shadcnui-blocks` directory.
 
