--- a/libs/storybook-host/src/Resources.mdx
+++ b/libs/storybook-host/src/Resources.mdx
@@ -13,8 +13,8 @@ For additional information and resources, refer to the following links:
 * [TypeScript Documentation](https://www.typescriptlang.org/docs/)
 * [Tailwind CSS Documentation](https://tailwindcss.com/docs)
 * [Tailwind CSS Website](https://tailwindcss.com/)
-* [shadcn/ui Documentation](https://ui.shadcn.dev/docs)
-* [shadcn/ui Website](https://ui.shadcn.com/)
+* [@rwoc/shadcnui Documentation](https://ui.shadcn.dev/docs)
+* [@rwoc/shadcnui Website](https://ui.shadcn.com/)
 * [Nx Documentation](https://nx.dev/getting-started/intro)
 * [Nx Website](https://nx.dev/)
 * [Vitest Documentation](https://vitest.dev/guide/)
