Reorganize landing component files and enhance HeroSection functionality (#159)
* chore(landing): reorganize component files and update imports for consistency

* docs(landing): update documentation for HeroSection and AboutSection components

* feat(hero-section): add variant prop for light and dark themes

* feat(about-section): add optional header and subheader props for customization

* feat(landing-library): add CTASection component to documentation

* docs(landing): update FeaturesSection titles and descriptions for clarity

* docs(introduction): enhance overview and component structure sections for clarity

* feat(about-section): replace CommunitySection with CTASection for enhanced engagement

* docs(best-practices): update best practices and add resource links for clarity

* docs(shadcnui): update references from shadcn/ui to @rwoc/shadcnui for consistency

* refactor(landing): rename GetStartedSection to StepsSection and remove unused components

* refactor(landing): update imports to use index files for better organization

--- a/libs/landing/src/lib/understanding-the-landing-library.mdx
+++ b/libs/landing/src/lib/understanding-the-landing-library.mdx
@@ -1,104 +1,150 @@
 import { Meta } from '@storybook/blocks';
+import { HeroSection } from './components/hero-section/HeroSection';
+import { AboutSection } from './components/about-section/AboutSection';
+import { CTASection } from './components/cta-section/CTASection';
+import { FeaturesSection } from './components/features-section/';
 
 <Meta title="Landing/Understanding the Landing Library" />
 
 # Understanding the Landing Library
 
-The `landing` library is a collection of components specifically designed for creating engaging and informative landing pages within the React Weapons of Choice (RWOC) monorepo. These components are styled with Tailwind CSS and Shadcn UI to ensure a consistent and cohesive design.
+The `landing` library is a collection of React components specifically designed for creating engaging and informative landing pages within the **React Weapons of Choice (RWOC)** monorepo. These components are styled with **Tailwind CSS** and **shadcn/ui** to ensure a consistent, cohesive, and accessible design.
+
+> **Why Use a Landing Library?**  
+> A well-crafted landing page serves as the first impression for many potential users. It should quickly and clearly communicate your project's value proposition, benefits, and calls-to-action (CTAs). By using pre-built, flexible components, you can focus on fine-tuning your message rather than spending time on layout and design basics.
 
 ## Components
 
 ### 1. **`HeroSection`**
-- **Description**: The `HeroSection` component is used to create a prominent introductory section on the landing page. It typically includes a title, subtitle, description, and a call-to-action button.
-- **Usage**:
-  ```tsx
-  import { HeroSection } from '@rwoc/landing';
+- **Description**: 
+  - The `HeroSection` is typically the first thing users see when they arrive at your site. It often includes a title, subtitle, brief description, and a clear call-to-action button. 
+  - This component sets the tone and brand identity for the entire landing page, so be sure to include compelling imagery or concise copy that resonates with your audience.
 
-  const LandingPage = () => (
-    <HeroSection
-      title="Welcome to RWOC"
-      subtitle="Discover the power of our monorepo"
-      description="Streamline your development workflow with our comprehensive and customizable boilerplate."
-      ctaPrimary={{
-        text: 'Get Started',
-        link: '/get-started',
-      }}
-      ctaSecondary={{
-        text: 'Learn More',
-        link: '/learn-more',
-      }}
-    />
-  );
-  ```
+<HeroSection
+  ctaPrimary={{
+    onClick: () => {},
+    text: 'Get Started'
+  }}
+  ctaSecondary={{
+    onClick: () => {},
+    text: 'Learn More'
+  }}
+  description="Discover the features and benefits of our platform."
+  highlights={[
+    'Feature 1',
+    'Feature 2',
+    'Feature 3'
+  ]}
+  image="https://via.placeholder.com/400"
+  imageAlt="Placeholder Image"
+  layout="left"
+  subtitle="Your journey starts here"
+  title="Welcome to Our Platform"
+/>
+
+> **Pro Tip:** 
+> - Keep the headline short and impactful. 
+> - Use visuals (illustrations, screenshots, or product images) that immediately convey your product’s core benefits.
+
+---
 
 ### 2. **`AboutSection`**
-- **Description**: The `AboutSection` component provides an overview of the project or company, highlighting key information and values.
-- **Usage**:
-  ```tsx
-  import { AboutSection } from '@rwoc/landing';
+- **Description**: 
+  - The `AboutSection` provides an overview of the project or company, highlighting key information, values, and the "why" behind it. 
+  - This helps build trust and connection with users who want to understand the story, mission, or background of your offering.
 
-  const LandingPage = () => (
-    <AboutSection
-      title="About Us"
-      description="Learn more about our mission and values."
-    />
-  );
-  ```
+<AboutSection
+  description="We are dedicated to delivering top-notch solutions that empower businesses to achieve their goals. Our team of experts works tirelessly to innovate and provide exceptional value to our clients."
+  logos={[
+    <svg key="logo1" fill="none" height="50" viewBox="0 0 24 24" width="50" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" strokeWidth="2"/><path d="M12 6v6l4 2" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"/></svg>,
+    <svg key="logo2" fill="none" height="50" viewBox="0 0 24 24" width="50" xmlns="http://www.w3.org/2000/svg"><rect height="18" rx="2" stroke="currentColor" strokeWidth="2" width="18" x="3" y="3"/><path d="M3 9h18M9 21V9" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"/></svg>
+  ]}
+  title="About Us"
+  header="Our Partners"
+  subheader="Trusted by Leading Companies"
+/>
 
-### 3. **`CommunitySection`**
-- **Description**: The `CommunitySection` component showcases the community around the project, including testimonials, user stories, and links to community resources.
-- **Usage**:
-  ```tsx
-  import { CommunitySection } from '@rwoc/landing';
+> **Best Practices:**  
+> - Use bullet points or short paragraphs to keep your message clear and scannable.  
+> - Include an “origin story” or motivation that shows authenticity.  
+> - Consider adding visuals or icons to break up text and keep it engaging.
 
-  const LandingPage = () => (
-    <CommunitySection
-      title="Join Our Community"
-      description="Connect with other users and contribute to the project."
-    />
-  );
-  ```
+---
+
+### 3. **`CTASection`**
+- **Description**: 
+  - The `CTASection` is designed to prompt users to take a specific action, such as trying a demo, signing up, or learning more. 
+  - This component typically includes a title, description, and a call-to-action button, making it a crucial part of driving user engagement and conversions.
+
+<CTASection
+  buttonAction={() => {}}
+  buttonText="Start Your Free Trial"
+  description="Sign up for a free trial and discover how our platform can help you streamline your workflow and boost productivity."
+  title="Get Started Today"
+  variant="light"
+/>
+
+> **Engagement Tips:**  
+> - Use clear and compelling language for the call-to-action to encourage user interaction.  
+> - Ensure the button stands out visually and is easy to click.  
+> - Test different variants (e.g., light vs. dark) to see which performs better with your audience.
+
+---
 
 ### 4. **`FeaturesSection`**
-- **Description**: The `FeaturesSection` component displays a list of features or benefits of the project or product.
-- **Usage**:
-  ```tsx
-  import { FeaturesSection } from '@rwoc/landing';
+- **Description**: 
+  - The `FeaturesSection` lists the standout features or benefits of your product or service. 
+  - Each feature can be highlighted with a short title, descriptive text, and an optional icon or image for visual interest.
 
-  const features = [
-    { title: 'Feature 1', description: 'Description of feature 1' },
-    { title: 'Feature 2', description: 'Description of feature 2' },
-    { title: 'Feature 3', description: 'Description of feature 3' },
-  ];
+<FeaturesSection
+  title="Why Choose Us"
+  features={[
+    { title: 'Seamless Integration', description: 'Easily integrate with your existing tools and workflows to enhance productivity and efficiency.' },
+    { title: 'Scalable Solutions', description: 'Our platform grows with your business, ensuring you never outgrow our services and can always meet demand.' },
+    { title: '24/7 Support', description: 'Get round-the-clock support from our dedicated team of experts, ensuring you are never left without assistance.' }
+  ]}
+/>
 
-  const LandingPage = () => (
-    <FeaturesSection
-      title="Our Features"
-      features={features}
-    />
-  );
-  ```
+> **How to Write Effective Features:**  
+> - Lead with benefits rather than just technical details (“Save time by automating ___,” “Reduce overhead by ___”).  
+> - Keep each feature description concise (2–3 sentences).  
+> - Use a consistent format for easier scanning and aesthetic harmony.
 
-### 5. **`PricingSection`**
-- **Description**: The `PricingSection` component presents the pricing plans available for the product or service.
-- **Usage**:
-  ```tsx
-  import { PricingSection } from '@rwoc/landing';
+---
 
-  const plans = [
-    { name: 'Free', price: '$0', features: ['Feature 1', 'Feature 2'] },
-    { name: 'Pro', price: '$49', features: ['Feature 1', 'Feature 2', 'Feature 3'] },
-    { name: 'Enterprise', price: '$99', features: ['Feature 1', 'Feature 2', 'Feature 3', 'Feature 4'] },
-  ];
 
-  const LandingPage = () => (
-    <PricingSection
-      title="Pricing Plans"
-      plans={plans}
-    />
-  );
-  ```
+## General Tips for Building a Successful Landing Page
+
+1. **Keep It Simple:**  
+   - Too many sections or lengthy text blocks can overwhelm visitors. Each section should serve a clear purpose: introduce, explain, persuade, or convert.
+
+2. **Engaging Headlines:**  
+   - Grab attention with short, benefit-driven headlines. Users should understand the core value in a split second.
+
+3. **Strong Calls-to-Action (CTAs):**  
+   - CTA buttons should be visually prominent, use action-oriented text, and directly address user needs or pain points (e.g., “Start Free Trial,” “Join Community,” “Learn More”).
+
+4. **Mobile Responsiveness:**  
+   - With Tailwind, it’s easy to ensure each section is responsive. Verify that elements display well across a variety of screen sizes.
+
+5. **Visual Consistency:**  
+   - Stick to consistent typography, spacing, and color usage. The `landing` library leverages Tailwind and shadcn/ui tokens to help you maintain a polished look.
+
+6. **Highlight Social Proof:**  
+   - Show testimonials, user counts, or logos of organizations that trust your product. Users often look for reassurance before committing.
+
+7. **Measure and Optimize:**  
+   - Use analytics or A/B tests to see where users drop off and optimize your sections accordingly. Sometimes a simple headline tweak can boost conversions dramatically.
+
+---
 
 ## Conclusion
 
-The `landing` library provides a set of components designed to create engaging and informative landing pages. By using these components, you can build a cohesive and visually appealing landing page that effectively communicates the value of your project or product.
+By utilizing the components provided in the `landing` library, you can quickly assemble a cohesive and visually appealing landing page that effectively communicates the **value** of your project or product. Whether you’re showcasing features, building trust with community highlights, or outlining pricing plans, these sections are designed to help you convert curious visitors into engaged users.
+
+> **Next Steps:**  
+> 1. **Import** the components you need.  
+> 2. **Adjust Props** (titles, descriptions, images) to match your brand tone and messaging.  
+> 3. **Deploy & Iterate** by collecting user feedback and optimizing key calls-to-action.
+
+If you have any questions or encounter any issues while building your landing page, feel free to open an issue or reach out to the community for support!
