--- a/libs/storybook-host/src/Resources.mdx
+++ b/libs/storybook-host/src/Resources.mdx
@@ -12,7 +12,10 @@ For additional information and resources, refer to the following links:
 * [React Documentation](https://reactjs.org/docs/getting-started.html)
 * [TypeScript Documentation](https://www.typescriptlang.org/docs/)
 * [Tailwind CSS Documentation](https://tailwindcss.com/docs)
-* [shadcn/ui Documentation](https://ui.shadcn.dev/docs)
+* [Tailwind CSS Website](https://tailwindcss.com/)
+* [@rwoc/shadcnui Documentation](https://ui.shadcn.dev/docs)
+* [@rwoc/shadcnui Website](https://ui.shadcn.com/)
 * [Nx Documentation](https://nx.dev/getting-started/intro)
+* [Nx Website](https://nx.dev/)
 * [Vitest Documentation](https://vitest.dev/guide/)
 * [Playwright Documentation](https://playwright.dev/docs/intro)
